// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup buttons should be displayed vertically 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-vertical\\"><button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-c-frcIsU-exaRme-auto-true nextui-c-frcIsU-gglxka-cv nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-text\\">action1</span></button><button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-c-frcIsU-exaRme-auto-true nextui-c-frcIsU-gglxka-cv nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-text\\">action2</span></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(var(--nextui-spacing-sm) * 0.5);
            border: 0px solid var(--nextui-color-background);
            background-color: transparent;
            height: min-content;
            
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-iXIgqZ-color-success nextui-c-frcIsU-dgPKkr-size-xs nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-c-frcIsU-exaRme-auto-true nextui-c-frcIsU-gNZcsS-cv nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-text\\">action</span></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(var(--nextui-spacing-sm) * 0.5);
            border: 0px solid var(--nextui-color-background);
            background-color: transparent;
            height: min-content;
            
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup props should be passed to each button 2`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-iXIgqZ-color-success nextui-c-frcIsU-dgPKkr-size-xs nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-cyFBRX-flat-true nextui-c-frcIsU-yxrPS-animated-true nextui-c-frcIsU-exaRme-auto-true nextui-c-frcIsU-gNZcsS-cv nextui-c-frcIsU-bXueNC-cv nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-text\\">action</span></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 7px;
            margin: calc(var(--nextui-spacing-sm) * 0.5);
            border: 0px solid var(--nextui-color-background);
            background-color: transparent;
            height: min-content;
            
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render correctly 1`] = `
"<div class=\\"nextui-button-group nextui-button-group-horizontal\\"><button class=\\"nextui-c-frcIsU nextui-c-huiNHE nextui-c-frcIsU-ikltse-color-default nextui-c-frcIsU-iPNlwO-size-md nextui-c-frcIsU-bzEnZV-borderWeight-normal nextui-c-frcIsU-yxrPS-animated-true nextui-c-frcIsU-exaRme-auto-true nextui-c-frcIsU-gglxka-cv nextui-button\\" data-state=\\"ready\\"><span class=\\"nextui-button-text\\">action</span></button><style>
          .nextui-button-group {
            display: inline-flex;
            border-radius: 12px;
            margin: calc(var(--nextui-spacing-sm) * 0.5);
            border: 0px solid var(--nextui-color-background);
            background-color: transparent;
            height: min-content;
            
          }
          .nextui-button-group :global(.nextui-button .nextui-button-text) {
            top: 0;
          }
          .nextui-button-group :global(.nextui-button) {
            border: none;
          }
          .nextui-button-group-vertical {
            flex-direction: column;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-bottom-left-radius: 0;
            border-left: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-horizontal :global(.nextui-button:not(:last-child)) {
            border-top-right-radius: 0;
            border-bottom-right-radius: 0;
          }
          .nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-left: 0 !important;
            filter: hue-rotate(310deg);
          }
          .nextui-button-group-gradient.nextui-button-group-horizontal
            :global(.nextui-button:last-child) {
            filter: hue-rotate(250deg);
            padding-left: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):not(:first-child)) {
            padding-top: 0 !important;
          }
          .nextui-button-group-gradient.nextui-button-group-vertical
            :global(.nextui-button:last-child) {
            padding-top: 0 !important;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:first-child)) {
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            border-top: 0px solid var(--nextui-color-background);
          }
          .nextui-button-group-vertical
            :global(.nextui-button:not(:first-child):before) {
            border-radius: 0;
          }
          .nextui-button-group-vertical :global(.nextui-button:not(:last-child)) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }

          .nextui-button-group-vertical
            :global(.nextui-button:not(:last-child):before) {
            border-bottom-left-radius: 0;
            border-bottom-right-radius: 0;
          }
        </style></div>"
`;

exports[`ButtonGroup should render different variants 1`] = `ReactWrapper {}`;

exports[`ButtonGroup should render different variants 2`] = `
<NextUI - Button
  animated={true}
  bordered={false}
  className=""
  clickable={true}
  disabled={false}
  flat={false}
  ghost={false}
  light={false}
  ripple={true}
>
  button
</NextUI - Button>
`;
